--- a/styles/main.css
+++ b/styles/main.css
@@ -43,3 +43,13 @@ body{
 @media(min-width: 1024 px){
     html{ font-size: 120%; }
 }
+
+.clearfix::before,
+.clearfix::after {
+    content: " ";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
+}
